[package]
name = "data-credits"
version = "0.2.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "data_credits"

[features]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
pyth-sdk-solana = { version = "0.8.0" }
lazy-transactions = { path = "../lazy-transactions", features = ["cpi"] }
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.28.0", features = ["mint", "token"] }
solana-security-txt = "1.1.1"
default-env = "0.1.1"
shared-utils = { path = "../../utils/shared-utils" }
circuit-breaker = { path = "../circuit-breaker", features = ["cpi"] }
helium-sub-daos = { path = "../helium-sub-daos", features = ["cpi"] }
