[package]
name = "hexboosting"
version = "0.0.5"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hexboosting"

[features]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.28.0", features = ["mint", "token"] }
shared-utils = { path = "../../utils/shared-utils" }
solana-security-txt = "1.1.1"
default-env = "0.1.1"
helium-sub-daos = { path = "../helium-sub-daos", features = ["cpi"] }
pyth-sdk-solana = { version = "0.8.0" }
mobile-entity-manager = { path = "../mobile-entity-manager", features = ["cpi"] }
bytemuck = "1.14.0"
