[package]
name = "lazy-transactions"
version = "0.2.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lazy_transactions"

[features]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.28.0", features = ["mint", "token"] }
shared-utils = { path = "../../utils/shared-utils" }
solana-security-txt = "1.1.1"
default-env = "0.1.1"
spl-concurrent-merkle-tree = "0.2.0"
bytemuck = "1.13.0"
