[package]
name = "mobile-entity-manager"
version = "0.1.2"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mobile_entity_manager"

[features]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
bs58 = "0.3.1"
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.28.0", features = ["mint", "token"] }
bytemuck = "1.12.3"
angry-purple-tiger = "0.1.0"
mpl-token-metadata = { version = "3.2.0" }
solana-security-txt = "1.1.1"
default-env = "0.1.1"
bubblegum-cpi = { rev = "a2d12e4a157d91feb73aa40a97fe297fd477dd87", git = "https://github.com/helium/account-compression-anchor-gen.git", features = ["cpi"]}
account-compression-cpi = { rev = "a2d12e4a157d91feb73aa40a97fe297fd477dd87", git = "https://github.com/helium/account-compression-anchor-gen.git", features = ["cpi"]}
shared-utils = { path = "../../utils/shared-utils" }
helium-entity-manager = { path = "../helium-entity-manager/", features = ["cpi"] }
helium-sub-daos = { path = "../helium-sub-daos", features = ["cpi"] }


