[package]
name = "rewards-oracle"
version = "0.2.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rewards_oracle"

[features]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
lazy-distributor = { path = "../lazy-distributor/", features = ["cpi"] }
helium-entity-manager = { path = "../helium-entity-manager/", features = ["cpi"] }
solana-security-txt = "1.1.1"
default-env = "0.1.1"
